[tool.poetry]
name = "cad-project"
version = "0.1.0"
description = ""
authors = ["Ahmed El-Zahaby <ahmedelzahaby8122000@gmail.com>"]
readme = "README.md"
packages = [{include = "cad_project"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
